--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -8,14 +8,19 @@
     "http-proxy-middleware": "^2.0.6",
     "jquery": "^3.6.4",
     "merge": "^2.1.1",
+    "moment": "^2.30.1",
     "oidc-client": "^1.11.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.1",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.11.0",
     "react-scripts": "^5.0.1",
     "reactstrap": "^9.1.9",
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0",
     "rimraf": "^5.0.0",
+    "thunk": "^0.0.1",
     "web-vitals": "^3.3.1",
     "workbox-background-sync": "^6.5.4",
     "workbox-broadcast-update": "^6.5.4",
